# fig

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: figbuf_bench.rs
bytes/: mod.rs
examples/: basic_usage.rs  small_buffer.rs
src/: bytes.rs  lib.rs  small.rs
tests/: bytes_tests.rs  integration_tests.rs  small_tests.rs
